# vid2creative

./: .gitignore  compress_video.py  creative-output-v2.html  creative-output.html  package-lock.json  package.json  test-3frames.sh  test-all.sh  test-analyze.sh  tsconfig.json  vid2creative-improvement-plan.md  vid2creative-srs.md  vid2creative-v2-claude-code-prompt.md  vite.config.ts  wrangler.local.toml  wrangler.toml
.claude/: settings.json
cli/: pyproject.toml
cli/tests/: test_cli.py  test_client.py
cli/vid2creative/: __init__.py  __main__.py  cli.py  client.py  config.py  display.py
src/container/: Dockerfile  main.py  requirements.txt
src/container/pipeline/: clip_scorer.py  extract.py  motion.py  scenes.py  selector.py  types.py
src/container/tests/: test_clip_scorer.py  test_extract.py  test_motion.py  test_scenes.py  test_selector.py
src/frontend/: App.tsx  index.css  index.html
src/frontend/components/: ExportPanel.tsx  FrameExtractor.tsx  LayerCanvas.tsx  LayerItem.tsx  LayerPanel.tsx  LayerPropertiesPanel.tsx  LayerRenderer.tsx  OverlayEditor.tsx  TemplateSelector.tsx  VideoUploader.tsx
src/frontend/hooks/: useAIAnalysis.ts  useFrameExtraction.ts  useHistory.ts  useLayers.ts  useMLPipeline.ts
src/frontend/lib/: api.ts  templates.ts  types.ts
src/worker/: cloudflare-workers-extra.d.ts  cron.ts  index.ts  types.ts
src/worker/__tests__/: services.test.ts
src/worker/middleware/: rate-limiter.ts
src/worker/routes/: analyze.ts  detect.ts  export.ts  process.ts  status.ts  upload.ts
src/worker/services/: html-generator.ts  storage.ts  (+1 more)
