[project]
name = "vid2creative"
version = "2.0.0"
description = "Convert gameplay videos to interactive HTML5 ad creatives"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
vid2creative = "vid2creative.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vid2creative"]
